# MTF_Weighted_Dominance

./: EA開発 要件定義（最終確定版）.md  PowerX Strategy with Basic Monte Carlo.txt  README.md  backtest_config.yaml  config.yaml  main.py  pyproject.toml  run_backtest.py  ta_lib-0.6.3-cp313-cp313-win32.whl
backtest/: __init__.py  backtest_engine.py  data_loader.py  run_backtest.py
brokers/: __init__.py  broker_base.py  mt5_broker.py
config/: __init__.py  config_manager.py
core/: __init__.py  base_strategy.py  data_provider.py  position_sizer.py
indicators/: __init__.py  indicator_base.py  momentum_indicators.py  volatility_indicators.py
powerx/: __init__.py  indicators.py  monte_carlo.py  mt5_handler.py  signals.py  strategy.py
powerx/backtest/: __init__.py  data_loader.py  engine.py
signals/: __init__.py  entry_signals.py  exit_signals.py  signal_base.py
strategies/: __init__.py  powerx_strategy.py
tests/: test_indicators.py  test_monte_carlo.py
tools/: backtest.py  backtest_config.yaml
utils/: __init__.py  logging_utils.py
